err/latimes-pluggablemaps-lametrorail.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/la_metro_rail'...
Listing './lib/python3.5/site-packages/la_metro_rail/data'...
Listing './lib/python3.5/site-packages/la_metro_rail/data/MetroRailLines1210'...
Listing './lib/python3.5/site-packages/la_metro_rail/data/MetroRailStations1210'...
Compiling './lib/python3.5/site-packages/la_metro_rail/load.py'...
***   File "./lib/python3.5/site-packages/la_metro_rail/load.py", line 235
    print "Fields: %s" % layer.fields
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/la_metro_rail/management'...
Listing './lib/python3.5/site-packages/la_metro_rail/management/commands'...
Compiling './lib/python3.5/site-packages/la_metro_rail/management/commands/loadlametrorail.py'...
***   File "./lib/python3.5/site-packages/la_metro_rail/management/commands/loadlametrorail.py", line 8
    print 'Loading data for L.A. Metro Rail lines'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/latimes_pluggablemaps_lametrorail-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
